# pilot-hdc-bff-web

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  build_and_push.sh  config.py  docker-compose.yaml  pyproject.toml
.github/workflows/: hdc-pipeline.yml
api/: api_archive.py  api_auth.py  api_bridge.py  api_central_node.py  api_contact_us.py  api_dataset_rest_proxy.py  api_download.py  api_email.py  api_invitation.py  api_lineage_provenance.py  api_preview.py  api_project.py  api_project_files.py  api_project_v2.py  api_provenance.py  api_task_stream.py  api_upload.py  api_users.py  api_workbench.py
api/api_announcement/: announcement.py  dependencies.py  schemas.py
api/api_container/: api_aduser_update.py  api_container_user.py  api_containers.py  api_folder_creation.py  namespace.py  route_registry.py  user_operation.py
api/api_copy_request/: copy_request.py
api/api_data_manifest/: data_manifest.py  utils.py
api/api_dataset/: api_activity_logs.py  api_folder.py  api_schema.py  api_schema_template.py  api_validate.py  api_versions.py
api/api_files/: favourites.py  file_ops.py  meta.py  utils.py  vfolder_ops.py
api/api_health/: health.py
api/api_kg/: kg.py
api/api_notification/: notification.py  parameters.py
api/api_permissions/: permissions.py
api/api_resource_request/: resource_request.py
api/api_tags/: api_batch_tags_operation.py  api_tags_operation.py  utils.py
api/api_user_event/: event.py
api/api_vm/: vm.py
api/api_workspace/: workspace.py
app/: __main__.py  api_registry.py  auth.py  logger.py  main.py
app/components/: exceptions.py  logging.py  schemas.py
app/components/request/: context.py  http_client.py
app/components/user/: models.py
app/dependencies/: __init__.py  redis.py
metrics/: prometheus.yaml
models/: api_invitation.py  api_meta_class.py  api_response.py  api_upload.py  bridge.py  contact_us.py  models_item.py  resource_request.py  service_meta_class.py  user_type.py
resources/: lock.py  minio.py  utils.py
services/: bridge.py
services/auth/: client.py
services/contact_us_services/: contact_us_manager.py
services/dataset/: __init__.py  client.py
services/kg/: client.py
services/meta/: __init__.py
services/notification/: client.py
services/notifier_services/: email_service.py  short_text_service.py
services/permissions_service/: decorators.py  utils.py
services/project/: client.py
services/search/: client.py
tests/: conftest.py  pytest.ini
tests/api/: test_api_bridge.py  test_api_central_node.py  test_api_dataset_rest_proxy.py  test_api_invitation.py  test_api_project_files.py  test_api_project_v2.py  test_api_upload.py  test_config.py  test_lineage_provenance.py
tests/api/api_activity_logs/: test_activity_logs.py
tests/api/api_announcement/: test_announcement.py
tests/api/api_container/: test_api_container_user.py  test_api_containers.py
tests/api/api_copy_request/: test_copy_request.py
tests/api/api_files/: test_meta.py
tests/api/api_kg/: test_kg.py
tests/api/api_notification/: test_notification.py
tests/api/api_permissions/: test_permissions.py
tests/api/api_resource_request/: test_resource_request.py
tests/api/api_tags/: test_api_batch_tags_operation.py  test_api_tags_operation.py
tests/api/api_template/: test_template.py
tests/app/: test_auth.py
tests/app/components/: test_logging.py
tests/app/dependencies/: test_redis.py
tests/fixtures/: bridge.py  fake.py  request_context.py
tests/fixtures/services/: dataset.py  project.py
tests/services/: test_bridge.py  test_dataset.py
tests/services/auth/: test_client.py
tests/services/dataset/: test_client.py
tests/services/meta/: test_entity.py
tests_contract/: conftest.py  pytest.ini
tests_contract/auth_service/: test_admin_user_api.py  test_authorize_api.py  test_events_api.py  test_invitation_api.py  test_user_api.py
(+5 files in other folders)
