[tool.poetry]
name = "core"
version = "2.2.69"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.115.11"
fastapi-utils = "0.2.1"
aniso8601 = "8.0.0"
attrs = "19.3.0"
certifi = "2020.4.5.1"
chardet = "3.0.4"
itsdangerous = "1.1.0"
Jinja2 = "2.11.3"
jsonschema = "3.2.0"
MarkupSafe = "1.1.1"
PyJWT = "2.6.0"
requests = "^2.32"
pydantic = "1.10.18"
asyncpg = "^0.30.0"
opentelemetry-exporter-otlp = "1.27.0"
opentelemetry-instrumentation = "0.48b0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-instrumentation-httpx = "0.48b0"
prometheus-fastapi-instrumentator = "6.1.0"
uvicorn = "0.17.6"
httpx = "0.27.2"
pilot-platform-common = "^0.8.0"
redis = "4.5.5"
pact-python = "^1.6.0"
protobuf = "3.20.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-mock = "3.7.0"
pytest-httpx = "0.30.0"
pytest-random-order = "1.1.1"
requests-mock = "1.9.3"
testcontainers = "4.9.1"
trio = "0.21.0"
pytest-asyncio = "^0.17.2"
Faker = "37.1.0"

[tool.pytest.ini_options]
addopts = "-v --random-order"
testpaths = "tests"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
